Fix movies per month chart x-axis title being cut off

--- a/apps/movielist/assets/css/_reports.scss
+++ b/apps/movielist/assets/css/_reports.scss
@@ -11,3 +11,9 @@
 		font-weight: bold;
 	}
 }
+
+#movies_per_month_chart {
+	svg {
+		overflow: visible;
+	}
+}
